Fix cell wrapping

--- a/graphics/css/game-layout/gba-1p.css
+++ b/graphics/css/game-layout/gba-1p.css
@@ -107,7 +107,7 @@ body{
 }
 
 .cell {
-    width: 150px;
+    min-width: 150px;
     height: 20px;
 }
 
